Fix padding issue in Category Header Fix visibility in OrderSelector for mobile

--- a/src/components/CategoryHeader/CategoryHeader.less
+++ b/src/components/CategoryHeader/CategoryHeader.less
@@ -2,7 +2,6 @@
 
 .CategoryHeader {
   background: #F7F7F7;
-  padding: 0px 10px;
 
   &__grid-button {
     .css-utils-clean-btn();
